--- a/index.html
+++ b/index.html
@@ -1,78 +1,180 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Неоновая надпись</title>
-    <style>
-        body {
-            margin: 0;
-            height: 100vh;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            background-color: #000;
-            font-family: 'Arial', sans-serif;
-            color: #fff;
-            overflow: hidden;
-        }
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>The Best SERVER</title>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700;900&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
 
-        /* Неоновая надпись */
-        .neon {
-            font-size: 3.5rem;
-            font-weight: bold;
-            text-align: center;
-            color: #fff;
-            text-shadow: 
-                0 0 5px #fff,
-                0 0 10px #fff,
-                0 0 20px #fff,
-                0 0 40px #ff00ff,
-                0 0 80px #ff00ff,
-                0 0 90px #ff00ff,
-                0 0 100px #ff00ff,
-                0 0 150px #ff00ff;
-            animation: flicker 1.5s infinite alternate;
-        }
+    body {
+      background: linear-gradient(135deg, #0f0c29, #302b63, #24243e);
+      color: #fff;
+      font-family: 'Poppins', sans-serif;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      overflow-x: hidden;
+      position: relative;
+    }
 
-        @keyframes flicker {
-            0%, 19%, 21%, 23%, 25%, 54%, 56%, 100% {
-                text-shadow: 
-                    0 0 5px #fff,
-                    0 0 10px #fff,
-                    0 0 20px #fff,
-                    0 0 40px #ff00ff,
-                    0 0 80px #ff00ff,
-                    0 0 90px #ff00ff,
-                    0 0 100px #ff00ff,
-                    0 0 150px #ff00ff;
-            }
-            20%, 22%, 24%, 55% {
-                text-shadow: none;
-            }
-        }
+    /* Неоновый фон с анимацией */
+    body::before {
+      content: '';
+      position: absolute;
+      top: 0; left: 0; right: 0; bottom: 0;
+      background: radial-gradient(circle at 20% 80%, rgba(120, 119, 198, 0.3) 0%, transparent 50%),
+                  radial-gradient(circle at 80% 20%, rgba(255, 119, 198, 0.3) 0%, transparent 50%);
+      z-index: -1;
+      animation: pulse 6s infinite alternate;
+    }
 
-        /* Обычная белая надпись */
-        .white-text {
-            margin-top: 2rem;
-            font-size: 1.5rem;
-            color: #fff;
-        }
+    @keyframes pulse {
+      0% { opacity: 0.7; transform: scale(1); }
+      100% { opacity: 1; transform: scale(1.05); }
+    }
 
-        .contact {
-            margin-top: 1rem;
-            font-size: 1.2rem;
-            color: #aaa;
-        }
-    </style>
+    header {
+      text-align: center;
+      padding: 4rem 2rem;
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+
+    h1 {
+      font-family: 'Orbitron', sans-serif;
+      font-size: 4.5rem;
+      font-weight: 900;
+      background: linear-gradient(90deg, #00f5ff, #ff00ff, #00ff88);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      background-clip: text;
+      text-shadow: 0 0 20px rgba(0, 245, 255, 0.6),
+                   0 0 40px rgba(255, 0, 255, 0.5),
+                   0 0 60px rgba(0, 255, 136, 0.4);
+      animation: neonGlow 2s ease-in-out infinite alternate;
+      margin-bottom: 1.5rem;
+    }
+
+    @keyframes neonGlow {
+      from { filter: drop-shadow(0 0 10px #00f5ff); }
+      to { filter: drop-shadow(0 0 30px #ff00ff) drop-shadow(0 0 50px #00ff88); }
+    }
+
+    p {
+      font-size: 1.3rem;
+      max-width: 800px;
+      margin: 0 auto 3rem;
+      line-height: 1.8;
+      color: #e0e0ff;
+      text-align: center;
+      padding: 0 1rem;
+    }
+
+    .btn {
+      display: inline-block;
+      padding: 1rem 2.5rem;
+      font-size: 1.2rem;
+      font-weight: 600;
+      text-transform: uppercase;
+      letter-spacing: 1px;
+      color: #fff;
+      background: linear-gradient(45deg, #ff00ff, #00f5ff);
+      border: none;
+      border-radius: 50px;
+      cursor: pointer;
+      text-decoration: none;
+      box-shadow: 0 0 20px rgba(255, 0, 255, 0.6),
+                  0 0 40px rgba(0, 245, 255, 0.5),
+                  inset 0 0 15px rgba(255, 255, 255, 0.2);
+      transition: all 0.3s ease;
+      position: relative;
+      overflow: hidden;
+      z-index: 1;
+    }
+
+    .btn::before {
+      content: '';
+      position: absolute;
+      top: 0; left: -100%;
+      width: 100%;
+      height: 100%;
+      background: linear-gradient(90deg, transparent, rgba(255,255,255,0.3), transparent);
+      transition: 0.7s;
+      z-index: -1;
+    }
+
+    .btn:hover::before {
+      left: 100%;
+    }
+
+    .btn:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 0 30px rgba(255, 0, 255, 0.8),
+                  0 0 60px rgba(0, 245, 255, 0.7);
+    }
+
+    .btn:active {
+      transform: translateY(-2px);
+    }
+
+    footer {
+      text-align: center;
+      padding: 2rem;
+      font-size: 0.9rem;
+      color: #aaa;
+      background: rgba(0, 0, 0, 0.3);
+      backdrop-filter: blur(5px);
+    }
+
+    /* Адаптивность */
+    @media (max-width: 768px) {
+      h1 {
+        font-size: 3rem;
+      }
+      p {
+        font-size: 1.1rem;
+      }
+      .btn {
+        padding: 0.9rem 2rem;
+        font-size: 1rem;
+      }
+    }
+
+    @media (max-width: 480px) {
+      h1 {
+        font-size: 2.3rem;
+      }
+      header {
+        padding: 3rem 1rem;
+      }
+      p {
+        font-size: 1rem;
+        padding: 0 1.5rem;
+      }
+    }
+  </style>
 </head>
 <body>
-    <div class="neon">
-        Увы, но у вас нету доступа к данному интернет ресурсу 🤷‍♂️
-    </div>
-    <div class="white-text">
-        Приобрести или попросить доступ можно у @bubuvpn
-    </div>
+
+  <header>
+    <h1>The Best SERVER</h1>
+    <p>Это лучший сервер, для всех возможных целей</p>
+    <a href="https://t.me/fillsofficial" target="_blank" class="btn">Получить доступ</a>
+  </header>
+
+  <footer>
+    <p>2025. Все права защищены ©</p>
+  </footer>
+
 </body>
 </html>
