--- a/index.html
+++ b/index.html
@@ -88,6 +88,36 @@
       from {transform: translateY(40px); opacity: 0;}
       to {transform: translateY(0); opacity: 1;}
     }
+
+    /* 📱 Адаптация под телефоны */
+    @media (max-width: 600px) {
+      header h1 {
+        font-size: 1.8em;
+        padding: 20px;
+      }
+      .projects {
+        margin: 20px;
+        padding: 20px;
+      }
+      .projects h2 {
+        font-size: 1.4em;
+      }
+      button {
+        width: 100%;
+        margin: 10px 0;
+        font-size: 1.1em;
+        padding: 14px;
+      }
+      .modal-content {
+        width: 90%;
+        padding: 20px;
+        font-size: 0.95em;
+      }
+      footer {
+        font-size: 0.8em;
+        padding: 15px;
+      }
+    }
   </style>
 </head>
 <body>
