--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1"> <!-- ВАЖНО для адаптации -->
   <title>Главная — Fillsteam</title>
   <style>
     body {
@@ -90,14 +91,15 @@
     }
 
     /* 📱 Адаптация под телефоны */
-    @media (max-width: 600px) {
+    @media (max-width: 768px) {
       header h1 {
         font-size: 1.8em;
         padding: 20px;
       }
       .projects {
-        margin: 20px;
+        margin: 15px;
         padding: 20px;
+        max-width: 100%;
       }
       .projects h2 {
         font-size: 1.4em;
@@ -109,13 +111,13 @@
         padding: 14px;
       }
       .modal-content {
-        width: 90%;
+        width: 95%;
         padding: 20px;
         font-size: 0.95em;
       }
       footer {
         font-size: 0.8em;
-        padding: 15px;
+        padding: 12px;
       }
     }
   </style>
